--- a/task2/back-end/Dockerfile
+++ b/task2/back-end/Dockerfile
@@ -1,26 +1,26 @@
-# Utilise l'image officielle Ubuntu la plus récente comme base
+# Use the latest version of Ubuntu as a parent image
 FROM ubuntu:latest
 
-# Définit le répertoire de travail dans le conteneur
-WORKDIR /app
+# Update the package lists for upgrades for packages that need upgrading
+RUN apt-get update
 
-# Met à jour les paquets et effectue une mise à niveau
-RUN apt-get update && apt-get upgrade -y
+# Upgrade all the installed packages
+RUN apt-get upgrade -y
 
-# Installe Python 3 et pip
+# Install Python3 and pip3
 RUN apt-get install -y python3 python3-pip
 
-# Supprime la gestion externe de Python (pour permettre l'installation de paquets)
-RUN rm /usr/lib/python*/EXTERNALLY-MANAGED || true
-
-# Installe Flask via pip
+# Install Flask using pip3
 RUN pip3 install flask
 
-# Copie le fichier api.py dans le conteneur
-COPY ./api.py /app/
+# Set the working directory to /app
+WORKDIR /app
 
-# Ouvre le port 5252
+# Copy the current directory contents into the container at /app
+COPY . /app
+
+# Make port 5252 available to the world outside this container
 EXPOSE 5252
 
-# Commande de démarrage du conteneur
+# Run api.py when the container launches
 CMD ["python3", "api.py"]
