--- a/task5/front-end/Dockerfile
+++ b/task5/front-end/Dockerfile
@@ -1,13 +1,8 @@
-# Dockerfile pour le front-end de l'application Softy Pinko
-
-# Utilise l'image officielle nginx comme base
+# Use the latest version of Nginx as a parent image
 FROM nginx:latest
 
-# Copie les fichiers de l'application web dans le répertoire de publication nginx
+# Copy the front-end files into the container at /var/www/html/softy-pinko-front-end
 COPY ./softy-pinko-front-end /var/www/html/softy-pinko-front-end
 
-# Copie le fichier de configuration nginx personnalisé
-COPY ./softy-pinko-front-end.config /etc/nginx/conf.d/default.conf
-
-# Indique que le conteneur écoute sur le port 9000
-EXPOSE 9000
+# Copy the Nginx configuration file into the container at /etc/nginx/conf.d/default.conf
+COPY ./softy-pinko-front-end.conf /etc/nginx/conf.d/default.conf
