--- a/task5/proxy/proxy.conf
+++ b/task5/proxy/proxy.conf
@@ -1,31 +1,11 @@
-# Configuration Nginx pour le serveur proxy
-# Ce fichier définit les règles de routage pour rediriger les requêtes vers les services appropriés
-
 server {
-    # Configuration du serveur pour écouter sur le port 80
     listen 80;
-    
-    # Configuration pour toutes les requêtes sur la racine "/" (front-end)
+
     location / {
-        # Redirection des requêtes vers le service front-end (web) sur le port 9000
-        proxy_pass http://web:9000;
-        
-        # Configuration des en-têtes pour le proxy
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_pass http://front-end:9000;
     }
-    
-    # Configuration pour toutes les requêtes commençant par "/api" (back-end)
+
     location /api {
-        # Redirection des requêtes vers le service back-end sur le port 5252
-        proxy_pass http://backend:5252;
-        
-        # Configuration des en-têtes pour le proxy
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_pass http://back-end:5252;
     }
 }
